syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message GetUserRequest {
  int32 id = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message DeleteUserRequest {
  int32 id = 1;
}

message UserResponse {
  User user = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}